Imported Upstream version 3.0.1

--- a/templates/cgi/debian/footer.html
+++ b/templates/cgi/debian/footer.html
@@ -1,8 +1,14 @@
-<div id="footer">
-	<br />
-	<h2 id="subtitle">Debian Live Project <a href="mailto:debian-live@lists.debian.org">&lt;debian-live@lists.debian.org&gt;</a> &mdash; <a href="http://live.debian.net/devel/live-build">live-build</a>, version VERSION &mdash; <a href="http://live.debian.net/legal.html">Legal information</a></h2>
-	<br />
-</div>
+      <hr>
 
-</body>
+      <footer>
+        <a href="http://live.debian.net/devel/live-build/">live-build</a> VERSION <a class="muted pull-right" href="http://live.debian.net/project/legal/">Legal Information</a></p>
+      </footer>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript -->
+    <script src="http://live.debian.net/stuff/jquery/jquery.min.js"></script>
+    <script src="http://live.debian.net/stuff/bootstrap/js/bootstrap.min.js"></script>
+
+  </body>
 </html>
