--- a/templates/cgi/debian/header.html
+++ b/templates/cgi/debian/header.html
@@ -1,38 +1,77 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
-<html>
-	<head>
-		<title>Debian Live Build</title>
-		<link rel="icon" href="http://live.debian.net/favicon.ico" type="image/ico">
-		<link rel="stylesheet" type="text/css" href="http://live.debian.net/stylesheet.css" />
-		<meta http-equiv="content-type" content="text/html; charset=iso-8859-15">
-		<meta name="keywords" content="Debian, Live, Project">
-		<meta name="description" content="The Debian Live Project">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Debian Live - Live Debian Systems!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Debian Live - Live Debian Systems!">
+    <meta name="author" content="Debian Live <debian-live@lists.debian.org>">
+    <meta name="keywords" content="Debian, Live, Systems">
 
-		<style type="text/css">
-			label { cursor:pointer; }
-		</style>
+    <!-- Le styles -->
+    <link href="http://live.debian.net/stuff/spacelab/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .label a:active, .label a:hover, .label a:link, .label a:visited {
+        color: #ffffff;
+        text-decoration: none;
+      }
+      label {
+        cursor:pointer;
+      }
+    </style>
+    <script type="text/javascript" language="JavaScript">
+      function collapse(x, txt) {
+        var oTemp=document.getElementById("text_"+x);
+        var oClick=document.getElementById("click_"+x);
+        if (oTemp.style.display=="block") {
+          oTemp.style.display="none";
+          oClick.innerHTML=txt+"&nbsp<small>(click to expand)<\/small><br \/>";
+        }
+        else {
+          oTemp.style.display="block";
+          oClick.innerHTML=txt+"&nbsp<small>(click to collapse)<\/small><br \/>";
+        }
+      }
+    </script>
 
-		<script type="text/javascript" language="JavaScript">
-			function collapse(x, txt)
-			{
-				var oTemp=document.getElementById("text_"+x);
-				var oClick=document.getElementById("click_"+x);
-				if (oTemp.style.display=="block")
-				{
-					oTemp.style.display="none";
-					oClick.innerHTML=txt+"&nbsp<small>(click to expand)<\/small><br \/>";
-				}
-				else
-				{
-					oTemp.style.display="block";
-					oClick.innerHTML=txt+"&nbsp<small>(click to collapse)<\/small><br \/>";
-				}
-			}
-		</script>
-	</head>
-<body>
+    <link href="http://live.debian.net/stuff/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 
-<div id="maincontent" style="margin: 0 0 0 0;">
-	<h1 id="title">live-build web-frontend of the <a href="http://live.debian.net/">Debian Live Project</a></h1>
-	<h2 id="subtitle"><a href="http://live.debian.net/">Live Debian systems!</a></h2>
-</div>
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://live.debian.net/stuff/html5shiv/html5shiv.min.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://live.debian.net/stuff/images/logo-144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://live.debian.net/stuff/images/logo-114.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://live.debian.net/stuff/images/logo-72.png">
+                    <link rel="apple-touch-icon-precomposed" href="http://live.debian.net/stuff/images/logo-57.png">
+                                   <link rel="shortcut icon" href="http://live.debian.net/stuff/images/logo-16.png">
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">Debian Live</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="http://live-build.debian.net/">Build</a></li>
+              <li><a href="http://live.debian.net/">WWW</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
