Debranding package for derivatives.

--- a/templates/cgi/debian/footer.html
+++ b/templates/cgi/debian/footer.html
@@ -1,14 +1,14 @@
       <hr>
 
       <footer>
-        <a href="http://live.debian.net/devel/live-build/">live-build</a> VERSION <a class="muted pull-right" href="http://live.debian.net/project/legal/">Legal Information</a></p>
+        <a href="http://live-systems.org/devel/live-build/">live-build</a> VERSION <a class="muted pull-right" href="http://live-systems.org/project/legal/">Legal Information</a></p>
       </footer>
 
     </div> <!-- /container -->
 
     <!-- Le javascript -->
-    <script src="http://live.debian.net/stuff/jquery/jquery.min.js"></script>
-    <script src="http://live.debian.net/stuff/bootstrap/js/bootstrap.min.js"></script>
+    <script src="http://live-systems.org/stuff/jquery/jquery.min.js"></script>
+    <script src="http://live-systems.org/stuff/bootstrap/js/bootstrap.min.js"></script>
 
   </body>
 </html>
