--- a/templates/cgi/debian/form.html
+++ b/templates/cgi/debian/form.html
@@ -1,5 +1,5 @@
 
-<h3>Submit your parameters (<b>working</b> email address is required) to generate your very own Debian Live system.</h3>
+<h3>Submit your parameters (<b>working</b> email address is required) to generate your very own live system.</h3>
 
 <form action="live-build" method="get">
 
@@ -186,11 +186,11 @@
 		</tr>
 		<tr>
 			<td><label for="Iso_Preparer">--iso-preparer:</label> </td>
-			<td><input id="Iso_Preparer" name="iso_preparer" maxlength="128" size="50" type="text" value="live-build; http://packages.qa.debian.org/live-build" /></td>
+			<td><input id="Iso_Preparer" name="iso_preparer" maxlength="128" size="50" type="text" value="live-build; http://live-systems.org/devel/live-build/" /></td>
 		</tr>
 		<tr>
 			<td><label for="Iso_Publisher">--iso-publisher:</label> </td>
-			<td><input id="Iso_Publisher" name="iso_publisher" maxlength="128" size="50" type="text" value="Debian Live project; http://live.debian.net/; debian-live@lists.debian.org" /></td>
+			<td><input id="Iso_Publisher" name="iso_publisher" maxlength="128" size="50" type="text" value="Live Systems project; http://live-systems.org/; debian-live@lists.debian.org" /></td>
 		</tr>
 		<tr>
 			<td><label for="Iso_Volume">--iso-volume:</label> </td>
