--- a/templates/cgi/debian/header.html
+++ b/templates/cgi/debian/header.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Debian Live - Live Debian Systems!</title>
+    <title>Live Systems</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Debian Live - Live Debian Systems!">
-    <meta name="author" content="Debian Live <debian-live@lists.debian.org>">
-    <meta name="keywords" content="Debian, Live, Systems">
+    <meta name="description" content="Live Systems">
+    <meta name="author" content="Live Systems Project <debian-live@lists.debian.org>">
 
     <!-- Le styles -->
-    <link href="http://live.debian.net/stuff/spacelab/bootstrap.min.css" rel="stylesheet">
+    <link href="http://live-systems.org/stuff/spacelab/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -38,19 +37,19 @@
       }
     </script>
 
-    <link href="http://live.debian.net/stuff/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="http://live-systems.org/stuff/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://live.debian.net/stuff/html5shiv/html5shiv.min.js"></script>
+      <script src="http://live-systems.org/stuff/html5shiv/html5shiv.min.js"></script>
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://live.debian.net/stuff/images/logo-144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://live.debian.net/stuff/images/logo-114.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://live.debian.net/stuff/images/logo-72.png">
-                    <link rel="apple-touch-icon-precomposed" href="http://live.debian.net/stuff/images/logo-57.png">
-                                   <link rel="shortcut icon" href="http://live.debian.net/stuff/images/logo-16.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://live-systems.org/stuff/images/logo-144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://live-systems.org/stuff/images/logo-114.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://live-systems.org/stuff/images/logo-72.png">
+                    <link rel="apple-touch-icon-precomposed" href="http://live-systems.org/stuff/images/logo-57.png">
+                                   <link rel="shortcut icon" href="http://live-systems.org/stuff/images/logo-16.png">
   </head>
 
   <body>
@@ -63,11 +62,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Debian Live</a>
+          <a class="brand" href="/">Live Systems</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="http://live-build.debian.net/">Build</a></li>
-              <li><a href="http://live.debian.net/">WWW</a></li>
+              <li><a href="http://live-systems.org/">WWW</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
