Converting l-b-cgi frontend to process forms with post.

--- a/templates/cgi/debian/form.html
+++ b/templates/cgi/debian/form.html
@@ -1,7 +1,7 @@
 
 <h3>Submit your parameters (<b>working</b> email address is required) to generate your very own live system.</h3>
 
-<form action="live-build" method="get">
+<form action="live-build" method="post">
 
 <fieldset>
 
