Imported Upstream version 4.0.4

--- a/templates/cgi/debian/form.html
+++ b/templates/cgi/debian/form.html
@@ -173,6 +173,7 @@
 			<td>
 				<select id="Bootloader" name="bootloader" size="1">
 					<option value="grub">grub</option>
+					<option value="grub2">grub2</option>
 					<option selected value="syslinux">syslinux</option>
 				</select>
 			</td>
